#488 fix layout on small devices, #633 fix layout gallery

--- a/OpenRobertaServer/staticResources/css/roberta.css
+++ b/OpenRobertaServer/staticResources/css/roberta.css
@@ -126,11 +126,11 @@ body.blocklyMinimalBody * {
     top: 10px;
     right: 10px;
 }
-#language {
+/* #language {
     float: left;
     margin: 0;
     padding: 0;
-}
+} */
 #language.nav>li>a {
     color: #333333;
     padding: 0;
